# fastapi-example

./: .pre-commit-config.yaml  README.md  api.py  pyproject.toml
fastapi_example/: schemas.py
fastapi_example/server/routers/: hero.py
hero_api/: schemas.py
hero_api/server/routers/: hero.py
hero_api/stores/: hero.py
scripts/: run.sh
tests/: test_fastapi_example.py  test_hero_api.py
